# bazinga

./: .dockerignore  .gitignore  CONTRIBUTING.md  COPILOT.md  DEPRECATED.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SECURITY_FIXES.md  coordination_structure_analysis.md  coordination_vs_bazinga_analysis.md  orchestrator_size_reduction_strategy.md  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_skills_enforcement.md  test_specialization.py  test_validation_report.md  validate_skills.py  validation_report_output_improvements.md
.claude/: FILE_SYNC.md  claude.md  pr-review-agent.md  settings.json
.github/: CODEOWNERS  copilot-instructions.md
agents/: bazinga_validator.md  developer.md  investigator.md  merge_developer.md  orchestrator.md  orchestrator_speckit.md  project_manager.md  qa_expert.md  requirements_engineer.md  senior_engineer.md  senior_software_engineer.md  tech_lead.md  tech_stack_scout.md  techlead.md
bazinga/: challenge_levels.json  model_selection.json  skills_config.json  testing_config.json
commands/: bazinga.orchestrate-from-spec.md  bazinga.orchestrate.md  orchestrate-from-spec.md  orchestrate.md
config/: claude.md
coordination/: skills_config.json
dashboard/: README.md  dashboard.sh  index.html  requirements.txt  server.py  test-dashboard.sh
dashboard-v2/: .gitignore  README.md  drizzle.config.ts  next.config.js  package-lock.json  package.json  playwright.config.ts
dev-scripts/: llm-reviews.sh
docs/: ADVANCED.md  ARCHITECTURE.md  COPILOT_SETUP.md  DASHBOARD.md  DOCS_INDEX.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_WORKFLOW.md  MIGRATION.md  MODEL_ESCALATION.md  PLATFORM_DIFFERENCES.md  PM_METRICS.md  QUICK_REFERENCE.md  SCOPE_REDUCTION_INCIDENT.md  SECURITY_FIXES.md  SKILLS.md  SPECIALIZATIONS.md  STATE_MANAGEMENT_GUIDE.md  TECH_DEBT_GUIDE.md  TELEMETRY.md  WINDOWS_SETUP.md  orchestrator-context-fix-report.md  orchestrator-references-guide.md
examples/: EXAMPLES.md
learning/: architecture.html  essentials.html  index.html  mastering.html  quickstart.html  recipes.html
marketing/: BLOG_POST.md  FEEDBACK_SYSTEM.md  LAUNCH_CHECKLIST.md  MARKETING_STRATEGY.md  README.md  SOCIAL_MEDIA_POSTS.md  social-marketing-package.md
mini-dashboard/: index.html  server.py
research/: adversarial-architecture-overhaul-ultrathink.md  agent-file-inclusion-verification.md  agent-model-configuration-system.md  agent-model-selection-strategy.md  agent-prompt-architecture-analysis.md  agent-prompt-composition-fix.md  agent-reasoning-capture-critical-review.md  agent-reasoning-capture-ultrathink.md  agent-token-optimization-strategy.md  autonomous-review-loop-design.md  background-subagent-persistence-ultrathink.md  bazinga-db-domain-split-implementation.md  bazinga-db-migration-post-implementation-review.md  bazinga-db-path-resolution-ultrathink.md  bazinga-db-skill-split-strategy.md  bazinga-db-split-critical-review.md  bazinga-training-course-plan.md  build-and-runtime-checks.md  build-system-analysis.md  clarify-db-connections-ultrathink.md  cli-config-resolution-analysis.md  client-hook-deployment-ultrathink.md  code-review-feedback-loop-final-review.md  code-review-feedback-loop-implementation-review.md  code-review-feedback-loop-p0p4-review.md  code-review-feedback-loop-self-review.md  code-review-feedback-loop-ultrathink.md  code-review-fix-self-review.md  codex-issues-evaluation.md  compact-return-protocol-complete.md  comprehensive-task-type-classification.md  config-seeder-fix-ultrathink.md  context-engineering-full-review.md  context-engineering-phase7-review.md  context-engineering-post-fix-review.md  context-engineering-strategy.md  context-fix-self-review.md  context-package-final-review.md  context-package-integration-analysis-2025-12-08.md  context-system-prompt-integration-review.md  (+134 more)
schemas/: handoff_qa_response.schema.json
scripts/: README.md  build-agent-files.ps1  build-agent-files.sh  build-slash-commands.ps1  build-slash-commands.sh  check-copilot-compatibility.py  check-no-hardcoded-models.sh  check-no-inline-sql.sh  fix-orchestrator-references.py  init-orchestration.ps1  init-orchestration.sh  install-hooks.ps1  install-hooks.sh  merge_agent_delta.py  migrate-coordination-structure.sh  parse-speckit-tasks.ps1  parse-speckit-tasks.sh  refactor-orchestrator.py  start-dashboard.ps1  start-dashboard.sh  state_helper.py  tech_debt.py  ultrathink-review.sh  validate-agent-sizes.sh  validate-db-skill-migration.sh  validate-orchestrator-references.ps1  validate-orchestrator-references.sh  validate-skills.ps1  validate-skills.sh
templates/: pm_routing.md  (+8 more)
(+484 files in other folders)
