[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bazinga-cli"
version = "1.1.0"
description = "BAZINGA CLI - A sophisticated multi-agent orchestration system for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mehdi C", email = "mehdic@users.noreply.github.com"},
]
keywords = ["claude", "ai", "multi-agent", "orchestration", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.25.0",
    "platformdirs>=3.0.0",
    "pyyaml>=6.0.0",  # For API contract validation (OpenAPI YAML parsing)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.0",
]
dashboard = [
    "flask>=3.0.0",
    "flask-sock>=0.7.0",
    "watchdog>=3.0.0",
    "anthropic>=0.39.0",  # For AI diagram feature
]

[project.urls]
Homepage = "https://github.com/mehdic/bazinga"
Repository = "https://github.com/mehdic/bazinga"
Documentation = "https://github.com/mehdic/bazinga#readme"
Issues = "https://github.com/mehdic/bazinga/issues"

[project.scripts]
bazinga = "bazinga_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bazinga_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"agents" = "share/bazinga_cli/agents"
"scripts" = "share/bazinga_cli/scripts"
".claude/commands" = "share/bazinga_cli/.claude/commands"
".claude/templates" = "share/bazinga_cli/.claude/templates"
"config" = "share/bazinga_cli/config"
".claude/skills" = "share/bazinga_cli/.claude/skills"
"dashboard" = "share/bazinga_cli/dashboard"
"bazinga/templates" = "share/bazinga_cli/bazinga/templates"
