[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrix-cli"
version = "3.0.0"
description = "Orchestrix CLI - A sophisticated multi-agent orchestration system for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mehdi C", email = "mehdic@users.noreply.github.com"},
]
keywords = ["claude", "ai", "multi-agent", "orchestration", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.25.0",
    "platformdirs>=3.0.0",
    "pyyaml>=6.0.0",  # For API contract validation (OpenAPI YAML parsing)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.0",
]
# Note: Dashboard v2 uses Next.js (npm), not Python packages

[project.urls]
Homepage = "https://github.com/mehdic/orchestrix"
Repository = "https://github.com/mehdic/orchestrix"
Documentation = "https://github.com/mehdic/orchestrix#readme"
Issues = "https://github.com/mehdic/orchestrix/issues"

[project.scripts]
orchestrix = "orchestrix_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrix_cli"]

# Force-include orchestrix config files as package data
# These are gitignored (for runtime state) but needed for distribution
# CLI checks package directory first, then falls back to shared-data
[tool.hatch.build.targets.wheel.force-include]
"orchestrix/model_selection.json" = "orchestrix_cli/orchestrix/model_selection.json"
"orchestrix/challenge_levels.json" = "orchestrix_cli/orchestrix/challenge_levels.json"
"orchestrix/skills_config.json" = "orchestrix_cli/orchestrix/skills_config.json"
"orchestrix/templates" = "orchestrix_cli/orchestrix/templates"

[tool.hatch.build.targets.wheel.shared-data]
"agents" = "share/orchestrix_cli/agents"
"scripts" = "share/orchestrix_cli/scripts"
"orchestrix/scripts" = "share/orchestrix_cli/orchestrix/scripts"
".claude/commands" = "share/orchestrix_cli/.claude/commands"
".claude/templates" = "share/orchestrix_cli/.claude/templates"
"config" = "share/orchestrix_cli/config"
".claude/skills" = "share/orchestrix_cli/.claude/skills"
"dashboard-v2" = "share/orchestrix_cli/dashboard-v2"
